--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <title>HTML Tutorial</title>
+<link rel="stylesheet" href="mystyle.css">
 <body>
 
 <h1>This is a heading :)</h1>
-<p>This is a paragraph.</p>
+<p>This is a paragraph.lalalallala</p>
 
 </body>
 </html>
